--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
         <div class="message" id="message"></div>
     </div>
     <script src="script.js"></script>
+
+    <!-- start of confetti  -->
+    <canvas id="confetti-canvas"></canvas>
+    <!-- end of confetti  -->
 </body>
 </html>
