--- a/index.html
+++ b/index.html
@@ -14,11 +14,19 @@
         <div class="sentence"></div>
         <div class="words"></div>
         <div class="message" id="message"></div>
+        <button id="next-button" style="display: none;">Next →</button>
     </div>
     <script src="script.js"></script>
 
     <!-- start of confetti  -->
     <canvas id="confetti-canvas"></canvas>
     <!-- end of confetti  -->
+
+    <div class="navigation">
+        <button id="next-button" style="display: none;">Next →</button>
+    </div>
+
+    <div id="progress"></div>
+
 </body>
 </html>
