--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
 
     <div id="progress"></div>
 
+    <div class="progress" id="progress"></div>
+
+    <button id="next-button" aria-label="Next activity" style="display: none;">Next →</button>
+
 </body>
 </html>
